# fbx2sf

./: .gitignore  .gitmodules  CMakeLists.txt  genfbs.bat
fbs/: bvh_accel.fbs  common.fbs  mesh_primitive.fbs  scene.fbs
src/: ParseCamera.cpp  ParseCamera.h  ParseLight.cpp  ParseLight.h  ParseMesh.cpp  ParseMesh.h  ParseNode.cpp  ParseNode.h  PraseMaterial.cpp  PraseMaterial.h  fileToScene.cpp  fileToScene.h  interface.cpp  interface.h  macro.h  main.cpp  sceneToFile.cpp  sceneToFile.h  test.cpp  tool.h
